K8S/platforms-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: platforms-depl
spec:
  replicas: 1  # giữ 1 container run
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: khanh1406/platformservice:latest
          imagePullPolicy: Never  # pull images nếu cần, nếu dùng local thì không cần
---
apiVersion: v1
kind: Service
metadata:
  name:  platform-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
  - name:  platformservice
    protocol: TCP
    port:  80
    targetPort:  80
