K8S/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
  labels:
    app.kubernetes.io/name: 
spec:
  rules:
  - host: acme.com
    http:
      paths:
      - pathType: Prefix
        path: "/api/Platforms"
        backend:
          service:
            name: platform-clusterip-srv
            port: 
              number: 80
      - pathType: Prefix
        path: "/api/c/Platforms"
        backend:
          service:
            name: command-clusterip-srv
            port: 
              number: 80
